--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title>My Webpage</title>
    </head>
    <body>
-      <p class="my-paragraph">Hello world I am robot speed 1 thz memory 1zb</p>
+      <p class="my-paragraph">Hello world I am robot</p>
    </body>
 </html>
