--- a/index.html
+++ b/index.html
@@ -3,7 +3,43 @@
    <head>
       <title>My Webpage</title>
    </head>
+<style>
+   .mySize {
+      width: 150px;
+      padding: 120px, 55px;
+      color: green;
+      height: 30px;
+      margin: 10px;
+      border: 12px;
+
+   }
+   .myText{
+      text-align: left;
+      margin: 10px;
+      border: 12px;
+      font-size: medium;
+      color: red;
+   }
+</style>
    <body>
-      <p class="my-paragraph">Hello world I am robot</p>
+      <div class="myText">Hello world</div>
+   
+      <button type="button" class=".mySize" onclick="alert('Hello World')"></button><br>
+      <button class=".mySize" >OtherButton</button><br>
+      <div>
+      <img src="/Users/sandy/Documents/html-playground/" alt="Flowers in Uganda" width="45"height="30"><br>
+      <br><br>
+      <form action="Eventpage.php">
+         <label for="fname">First Name</label>
+         <input type="text"id="fname"Name="sandy"><br><br><br>
+         <label for="lname">Last Name</label>
+         <input type="text"id="lname"Name="Adi"><br><br>
+         <label for="pwd">Enter password</label><br>
+         <input type="password"id="pwd"Name="password">
+         <input type="button"value="Submit">
+      </div>
+      </form>
+
+   
    </body>
 </html>
