--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>My Webpage</title>
+      <title>HTML Playground</title>
+      <h1>HTML Playground</h1><br><br>
    </head>
-<style>
-   .mySize {
-      width: 150px;
-      padding: 120px, 55px;
-      color: green;
-      height: 30px;
-      margin: 10px;
-      border: 12px;
+<body>
+   <p>This webpage will show some different HTML elements</p>
+   <div>
+   <input type="button"value="Button1">
+   <input type="button"value="Button2"><br><br>
+   <h2>Inputs</h2>
+   <input type="text"id="TextInput"placeholder="Text Input" >
+   <input type="password"id="Password"placeholder="Password Input"><br>
+    <h2>Anchor</h2>
+    <a href="https://www.google.com/">click me to go to Google</a>  
+    <h2>Table</h2>
+    <table>
+      <tr> 
+      <th>Table Header1</th>
+       <th>Table Header2</th>
+      </tr>
+      <tr>
+       <td>Value1</td>
+       <td>Value2</td>
+      </tr>
+      </table>
+    <h2>Spans</h2>
+    <p>hi<span style="color: blue">12</span></p>
+    <p>hi<span style="color:orange">24</span></style></span>
+    <h2>Nested Element</h2>
+    <input type="button" value="A button that goes to Google"onclick="#c4">
+    <p>Hello World! I am <span style="color:red">John</span></p>  
+</div>
 
-   }
-   .myText{
-      text-align: left;
-      margin: 10px;
-      border: 12px;
-      font-size: medium;
-      color: red;
-   }
-</style>
-   <body>
-      <div class="myText">Hello world</div>
-   
-      <button type="button" class=".mySize" onclick="alert('Hello World')"></button><br>
-      <button class=".mySize" >OtherButton</button><br>
-      <div>
-      <img src="/Users/sandy/Documents/html-playground/" alt="Flowers in Uganda" width="45"height="30"><br>
-      <br><br>
-      <form action="Eventpage.php">
-         <label for="fname">First Name</label>
-         <input type="text"id="fname"Name="sandy"><br><br><br>
-         <label for="lname">Last Name</label>
-         <input type="text"id="lname"Name="Adi"><br><br>
-         <label for="pwd">Enter password</label><br>
-         <input type="password"id="pwd"Name="password">
-         <input type="button"value="Submit">
-      </div>
-      </form>
 
+
+<h3 id="c4">Thank you for searching me and welcome to Google</h3>
+
+</body>
+      
+       
    
-   </body>
 </html>
